<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/main_toolbar_shuffle"
        android:title="@string/menu_shuffle"
        android:icon="@mipmap/ic_action_shuffle"
        app:showAsAction="always" />
    <item
        android:id="@+id/main_toolbar_search"
        android:title="@string/menu_search"
        android:icon="@mipmap/ic_action_search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/main_toolbar_notify"
        android:title="@string/menu_notify"
        android:icon="@mipmap/ic_action_notify"
        app:showAsAction="always" />

    <item
        android:id="@+id/main_toolbar_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/main_toolbar_register"
        android:title="@string/menu_register"
        app:showAsAction="never" />
</menu>